CHATS_SIT/force-app/main/default/objects/batchsit_t_fcompsn_eligty_detail__x.object
<CustomObject>
    <description>batchsit$t_fcompsn_eligty_detail</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_fcompsn_eligty_detail</externalName>
    <fields>
        <fullName>cde_reason_change_eligty__c</fullName>
        <description>cde_reason_change_eligty</description>
        <externalDeveloperName>cde_reason_change_eligty</externalDeveloperName>
        <label>Eligibility Change Reason</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_eligty_family__c</fullName>
        <description>cde_status_eligty_family</description>
        <externalDeveloperName>cde_status_eligty_family</externalDeveloperName>
        <label>Household Eligibility Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_fcompsn_eligty_detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn__c</fullName>
        <description>idn_eligty_fcompsn</description>
        <externalDeveloperName>idn_eligty_fcompsn</externalDeveloperName>
        <label>Household Eligibility ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_eligty__x</referenceTo>
        <relationshipLabel>Household Eligibility Detail</relationshipLabel>
        <relationshipName>batchsit_t_fcompsn_eligty_detail</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn_detail__c</fullName>
        <description>idn_eligty_fcompsn_detail</description>
        <externalDeveloperName>idn_eligty_fcompsn_detail</externalDeveloperName>
        <label>Number Eligtyuence fcompsnory Detail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ind_ovrd_data__c</fullName>
        <description>ind_ovrd_data</description>
        <externalDeveloperName>ind_ovrd_data</externalDeveloperName>
        <label>Data has been overridden</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_fcompsn_eligty_detail1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Household Eligibility Detail</label>
    <pluralLabel>Household Eligibility Detail</pluralLabel>
</CustomObject>